fix translation and bug on tabs

--- a/client/src/translations/financial_words_en.json
+++ b/client/src/translations/financial_words_en.json
@@ -31,6 +31,7 @@
   "expenses": "Expenses ",
   "expense": "Expense ",
   "expensesResults": "Expenses Results",
+  "expensesResultsShort": "Expenses Res.",
   "bonusAndFuelAllowances": "Bonus・Fuel Allowances",
   "bonusAndFuelAllowance": "Bonus・Fuel Allowance",
   "grossProfitMargin": "Gross Profit Margin",
@@ -47,7 +48,8 @@
   "professionalServicesFees": "Professional Services Fees",
   "professionalServicesFee": "Professional Services Fee",
   "employeeExpenses": "Employee Expenses",
-  "employeeExpensesResults": "Emp. Expenses Results",
+  "employeeExpensesResults": "Employee Expenses Results",
+  "employeeExpensesResultsShort": "Employee Exp. Res.",
   "employeeExpensesResultsList": "Employee Expenses Results List",
   "employeeExpensesResultsRegistration": "Employee Expenses Results Registration",
   "planning": "Planning",
@@ -60,6 +62,7 @@
   "projectSalesResultsList": "Project Sales Results List",
   "projectSalesResultsRegistration": "Product Sales Results Registration",
   "projectSalesResults" : "Project Sales Results",
+  "projectSalesResultsShort" : "Project Sales Res.",
   "rentExpenses": "Rent Expenses",
   "rentExpense": "Rent Expense",
   "executiveRenumerations": "Executive Renumerations",
