--- a/client/src/translations/screenNames_words_en.json
+++ b/client/src/translations/screenNames_words_en.json
@@ -12,6 +12,7 @@
     "projectsSalesResultsEdit": "Project Sales Results Edit",
     "employeeExpensesRegistration": "Employee Expenses Registration",
     "employeeExpensesList": "Employee Expenses List",
+    "employeeExpensesEdit": "Employee Expenses Edit",
     "expensesRegistration": "Expenses Registration",
     "expensesList": "Expenses List",
     "expensesResultsRegistration": "Expenses Results Registration",
