--- a/client/src/translations/financial_words_jp.json
+++ b/client/src/translations/financial_words_jp.json
@@ -31,6 +31,7 @@
   "expenses": "経費 ",
   "expense": "経費 ",
   "expensesResults": "経費実績",
+  "expensesResultsShort": "経費実績",
   "bonusAndFuelAllowances": "賞与・燃料手当",
   "bonusAndFuelAllowance": "賞与・燃料手当",
   "grossProfitMargin": "売上総利益率",
@@ -50,6 +51,7 @@
   "professionalServicesFee": "支払報酬",
   "employeeExpenses": "人件費",
   "employeeExpensesResults": "人件費実績",
+  "employeeExpensesResultsShort": "人件費実績",
   "employeeExpensesResultsList": "案件人件費実績一覧",
   "employeeExpensesResultsRegistration": "案件人件費実績登録",
   "employeeExpense": "人件費",
@@ -63,6 +65,7 @@
   "projectSalesResultsList": "案件売上実績一覧",
   "projectSalesResultsRegistration": "案件売上実績登録",
   "projectSalesResults" : "案件売上実績",
+  "projectSalesResultsShort" : "案件売上実績",
   "rentExpenses": "賃借料",
   "rentExpense": "賃借料",
   "executiveRenumerations": "役員報酬",
