added overwrite function on project sales result page

--- a/client/src/translations/screenNames_words_en.json
+++ b/client/src/translations/screenNames_words_en.json
@@ -14,6 +14,8 @@
     "employeeExpensesList": "Employee Expenses List",
     "employeeExpensesEdit": "Employee Expenses Edit",
     "expensesRegistration": "Expenses Registration",
+    "employeeExpensesResultsList": "Employee Expenses Results List",
+    "employeeExpensesResultsEdit": "Employee Expenses Results Edit",
     "expensesList": "Expenses List",
     "expensesResultsRegistration": "Expenses Results Registration",
     "expensesResultsList": "Expenses Results List",
