--- a/client/src/translations/general_words_en.json
+++ b/client/src/translations/general_words_en.json
@@ -50,6 +50,7 @@
   "switchToDisplayMode": "Switch to Display Mode",
   "cannotSwitchLanguagesInEditMode": "Cannot switch languages in Edit Mode",
   "alertMessageAbove": "The selected year and month: '${existingEntries}' already has data registered. Do you want to overwrite it?",
+  "alertMessageAboveProjectSalesResult": "The selected project name(s): '${existingEntries}' already has data registered. Do you want to overwrite it?",
   "alertMessageNewEntries": " And save the new selected year and month: '${newEntries}'?",
   "createdBy": "Created By",
   "createdAt": "Created At",
