--- a/client/src/translations/general_words_jp.json
+++ b/client/src/translations/general_words_jp.json
@@ -50,6 +50,7 @@
   "switchToDisplayMode": "表示モード切り替え",
   "cannotSwitchLanguagesInEditMode": "編集モードで言語を切り替えられない",
   "alertMessageAbove": "選択された年と月 '${existingEntries}' には既にデータが登録されています。上書きしますか？",
+  "alertMessageAboveProjectSalesResult": "選択したプロジェクト名: '${existingEntries}'にはすでにデータが登録されています。上書きしますか？",
   "alertMessageNewEntries": "そして、新しく選択された年と月 '${newEntries}' を保存しますか？",
   "createdBy": "記載者",
   "createdAt": "登録日",
