--- a/client/src/translations/screenNames_words_jp.json
+++ b/client/src/translations/screenNames_words_jp.json
@@ -14,6 +14,8 @@
   "employeeExpensesList": "人件費一覧",
   "employeeExpensesEdit": "人件費編集",
   "expensesRegistration": "経費登録",
+  "employeeExpensesResultsList": "案件人件費実績一覧",
+  "employeeExpensesResultsEdit": "案件人件費実績編集",
   "expensesList": "経費一覧",
   "expensesEdit": "経費編集",
   "expensesResultsRegistration": "経費実績登録",
