partial implementation of cost of sale result page

--- a/client/src/translations/screenNames_words_en.json
+++ b/client/src/translations/screenNames_words_en.json
@@ -22,6 +22,8 @@
     "expensesResultsEdit" : "Expenses Results Edit",
     "costOfSalesRegistration": "Cost of Sales Registration",
     "costOfSalesList": "Cost of Sales List",
+    "costOfSalesResultsList": "Cost of Sales Results List",
+    "costOfSalesResultsEdit": "Cost of Sales Results Edit",
     "clientsRegistration": "Clients Registration",
     "clientsList": "Clients List",
     "employeesRegistration": "Employees Registration",
