updates on classnames , changes on scss

--- a/client/src/translations/financial_words_en.json
+++ b/client/src/translations/financial_words_en.json
@@ -18,6 +18,7 @@
   "costOfSale": "Cost of Sale",
   "costOfSalesResults": "Cost of Sales Results",
   "costOfSaleResult": "Cost of Sale Result",
+  "costOfSalesResultsShort" : "Cost of Sales Res.",
   "ordinaryIncomeProfitMargin": "Ordinary Income Profit Margin",
   "ordinaryProfitMargin": "Ordinary Income Profit Margin",
   "ordinaryIncome": "Ordinary Income",
