--- a/client/src/translations/screenNames_words_en.json
+++ b/client/src/translations/screenNames_words_en.json
@@ -20,8 +20,9 @@
     "expensesResultsRegistration": "Expenses Results Registration",
     "expensesResultsList": "Expenses Results List",
     "expensesResultsEdit" : "Expenses Results Edit",
-    "costOfSalesRegistration": "Cost of Sales Registration",
+    "costOfSalesResultsRegistration": "Cost of Sales Results Registration",
     "costOfSalesList": "Cost of Sales List",
+    "costOfSalesRegistration": "Cost of Sales Registration",
     "costOfSalesResultsList": "Cost of Sales Results List",
     "costOfSalesResultsEdit": "Cost of Sales Results Edit",
     "clientsRegistration": "Clients Registration",
