--- a/client/src/translations/financial_words_jp.json
+++ b/client/src/translations/financial_words_jp.json
@@ -18,6 +18,7 @@
   "costOfSale": "売上原価",
   "costOfSalesResults": "売上原価結果",
   "costOfSaleResult": "売上原価結果",
+  "costOfSalesResultsShort" : "売上原価結果",
   "ordinaryIncomeProfitMargin": "経常利益率",
   "ordinaryIncome": "経常利益",
   "ordinaryProfit": "経常利益",
