--- a/client/src/translations/general_words_jp.json
+++ b/client/src/translations/general_words_jp.json
@@ -130,6 +130,9 @@
   "selectYear": "年選択",
   "selectMonth": "月選択",
   "selectProject": "案件選択",
+  "selectClient" : "顧客選択",
+  "selectBusinessDivision" : "受注事業部選択",
+  "selectCompany" : "会社名選択",
   "ExceedsMaximumLengthOfCharacters(100)": "許容される文字の最大長を超える(100)。",
   "cannotBeLessThanZero": "0未満にはできません。",
   "inputCannotBeEmpty": "必須項目です。",
