--- a/client/src/translations/general_words_jp.json
+++ b/client/src/translations/general_words_jp.json
@@ -155,6 +155,7 @@
   "invalidInputOrEmailDoesNotExist": "無効な入力またはメールが存在しない",
   "MailSentSuccess": "メールの送信に成功",
   "projectResults": "案件実績",
-  "yearMonth":"年/月",
-  "csvFileName": "CSV: 財務概要"
+  "yearMonth": "年/月",
+  "csvFileName": "CSV: 財務概要",
+  "No.": "番号"
 }
