--- a/client/src/translations/financial_words_en.json
+++ b/client/src/translations/financial_words_en.json
@@ -18,7 +18,7 @@
   "costOfSale": "Cost of Sale",
   "costOfSalesResults": "Cost of Sales Results",
   "costOfSaleResult": "Cost of Sale Result",
-  "costOfSalesResultsShort" : "Cost of Sales Res.",
+  "costOfSalesResultsShort": "Cost of Sales Res.",
   "ordinaryIncomeProfitMargin": "Ordinary Income Profit Margin",
   "ordinaryProfitMargin": "Ordinary Income Profit Margin",
   "ordinaryIncome": "Ordinary Income",
@@ -51,6 +51,7 @@
   "outsourcingExpense": "Outsourcing Expense",
   "professionalServicesFees": "Professional Services Fees",
   "professionalServicesFee": "Professional Services Fee",
+  "professionalServiceFee": "Professional Service Fee",
   "employeeExpenses": "Employee Expenses",
   "employeeExpensesResults": "Employee Expenses Results",
   "employeeExpensesResultsShort": "Employee Exp. Res.",
@@ -64,8 +65,8 @@
   "projectSalesResultsId": "ID",
   "projectSalesResultsList": "Project Sales Results List",
   "projectSalesResultsRegistration": "Product Sales Results Registration",
-  "projectSalesResults" : "Project Sales Results",
-  "projectSalesResultsShort" : "Project Sales Res.",
+  "projectSalesResults": "Project Sales Results",
+  "projectSalesResultsShort": "Project Sales Res.",
   "rentExpenses": "Rent Expenses",
   "rentExpense": "Rent Expense",
   "executiveRenumerations": "Executive Renumerations",
