--- a/client/src/translations/financial_words_jp.json
+++ b/client/src/translations/financial_words_jp.json
@@ -18,7 +18,7 @@
   "costOfSale": "売上原価",
   "costOfSalesResults": "売上原価結果",
   "costOfSaleResult": "売上原価結果",
-  "costOfSalesResultsShort" : "売上原価結果",
+  "costOfSalesResultsShort": "売上原価結果",
   "ordinaryIncomeProfitMargin": "経常利益率",
   "ordinaryIncome": "経常利益",
   "ordinaryProfit": "経常利益",
@@ -53,6 +53,7 @@
   "outsourcingExpense": "外注加工費",
   "professionalServicesFees": "支払報酬",
   "professionalServicesFee": "支払報酬",
+  "professionalServiceFee": "支払報酬",
   "employeeExpenses": "人件費",
   "employeeExpensesResults": "人件費実績",
   "employeeExpensesResultsShort": "人件費実績",
@@ -67,8 +68,8 @@
   "projectSalesResultsId": "アイド",
   "projectSalesResultsList": "案件売上実績一覧",
   "projectSalesResultsRegistration": "案件売上実績登録",
-  "projectSalesResults" : "案件売上実績",
-  "projectSalesResultsShort" : "案件売上実績",
+  "projectSalesResults": "案件売上実績",
+  "projectSalesResultsShort": "案件売上実績",
   "rentExpenses": "賃借料",
   "rentExpense": "賃借料",
   "executiveRenumerations": "役員報酬",
