--- a/client/src/translations/validation_errors_jp.json
+++ b/client/src/translations/validation_errors_jp.json
@@ -3,6 +3,7 @@
   "thisFieldMayNotBeBlank": "必須項目です。",
   "aValidIntegerIsRequired": "有効な整数必要です。",
   "thisFieldCannotBeEmpty": "必須項目です。",
+  "thisFieldIsRequired":"必須項目です。",
   "eitherSalaryOrExecutiveRenumerationMustBeProvided": "給与それとも役員報酬必須項目です。",
   "nonFieldErrors": "フォームにエラーが発生しました",
   "isNotAValidChoice": "有効な選択肢ではありません",
