fix translation on excel file names and download button

--- a/client/src/translations/general_words_jp.json
+++ b/client/src/translations/general_words_jp.json
@@ -156,5 +156,6 @@
   "MailSentSuccess": "メールの送信に成功",
   "projectResults": "案件実績",
   "yearMonth":"年/月",
-  "csvFileName": "CSV: 財務概要"
+  "csvFileName": "CSV: 財務概要",
+  "resultsSummary" : "実績-概要"
 }
