--- a/client/src/translations/general_words_en.json
+++ b/client/src/translations/general_words_en.json
@@ -156,5 +156,6 @@
   "MailSentSuccess":"Mail Sent Successfully.",
   "projectResults": "Project Result",
   "yearMonth": "Year/Month",
-  "csvFileName": "CSV: Financial Summary"
+  "csvFileName": "CSV: Financial Summary",
+  "resultsSummary" : "Results-Summary"
 }
