small changes on translation

--- a/client/src/translations/general_words_en.json
+++ b/client/src/translations/general_words_en.json
@@ -8,7 +8,7 @@
   "client": "Client",
   "clientName": "Client Name",
   "confirmPassword": "Confirm Password",
-  "download": "Download",
+  "download": "Download XLS",
   "emailAddress": "Email Address",
   "employee": "Employees",
   "enter": "Enter",
