fix small translation

--- a/client/src/translations/general_words_jp.json
+++ b/client/src/translations/general_words_jp.json
@@ -8,7 +8,7 @@
   "client": "顧客",
   "clientName": "顧客名",
   "confirmPassword": "パスワード確認",
-  "download": "ダウンロード",
+  "download": "ダウンロード XLS",
   "emailAddress": "メールアドレス",
   "employee": "従業員",
   "enter": "入力",
