fixed spelling mistake in all codebase

--- a/client/src/translations/financial_words_en.json
+++ b/client/src/translations/financial_words_en.json
@@ -68,8 +68,8 @@
   "projectSalesResultsShort" : "Project Sales Res.",
   "rentExpenses": "Rent Expenses",
   "rentExpense": "Rent Expense",
-  "executiveRenumerations": "Executive Renumerations",
-  "executiveRenumeration": "Executive Renumeration",
+  "executiveRemunerations": "Executive Remunerations",
+  "executiveRemuneration": "Executive Remuneration",
   "results": "Results",
   "salaries": "Salaries",
   "salary": "Salary",
