--- a/client/src/translations/financial_words_jp.json
+++ b/client/src/translations/financial_words_jp.json
@@ -71,8 +71,8 @@
   "projectSalesResultsShort" : "案件売上実績",
   "rentExpenses": "賃借料",
   "rentExpense": "賃借料",
-  "executiveRenumerations": "役員報酬",
-  "executiveRenumeration": "役員報酬",
+  "executiveRemunerations": "役員報酬",
+  "executiveRemuneration": "役員報酬",
   "results": "実績",
   "salaries": "給与",
   "salary": "給与",
