--- a/client/src/translations/general_words_en.json
+++ b/client/src/translations/general_words_en.json
@@ -120,6 +120,7 @@
   "projectOverwriteMessage": "The selected fields with: '${existingEntries}' already has data registered. Do you want to overwrite it?",
   "projectNewEntry": " And save the new selected fields with: '${newEntries}'?",
   "updateMessage": "Are you sure you would like to update this data?",
+  "nonActiveMessage": "You are being logged out due to an error or inactivity",
   "listScreen": "List Screen",
   "employeeExpensesDuplicateData": "The selected project already exists for ${date} for employee ${employeeName}.",
   "type": "Type",
