Graph Works and Displays. Cards Have Data but dispatches and redux need to be fixed

--- a/client/src/translations/financial_words_en.json
+++ b/client/src/translations/financial_words_en.json
@@ -108,5 +108,6 @@
   "cumulativeOrdinaryIncomeShort": "Cumulative Ord. Inc.",
   "operatingIncomeShort": "Op. Income",
   "operatingProfitMarginShort": "Op. Profit Margin",
-  "margins": "Margins"
+  "margins": "Margins",
+  "financials": "Financials"
 }
