--- a/client/src/translations/financial_words_jp.json
+++ b/client/src/translations/financial_words_jp.json
@@ -106,6 +106,7 @@
   "secondHalftotal": "下期計",
   "totalTable": "合計",
   "sellingAndGeneralAdminExpensesShort": "販売及び一般管理費",
-  "margins": "益率"
+  "margins": "益率",
+  "financials": "財務"
 }
 
