--- a/client/src/translations/general_words_jp.json
+++ b/client/src/translations/general_words_jp.json
@@ -157,5 +157,6 @@
   "projectResults": "案件実績",
   "yearMonth":"年/月",
   "csvFileName": "CSV: 財務概要",
-  "resultsSummary" : "実績-概要"
+  "resultsSummary" : "実績-概要",
+  "changeGraphType": "グラフ変更"
 }
