--- a/client/src/translations/general_words_en.json
+++ b/client/src/translations/general_words_en.json
@@ -157,5 +157,6 @@
   "projectResults": "Project Result",
   "yearMonth": "Year/Month",
   "csvFileName": "CSV: Financial Summary",
-  "resultsSummary" : "Results-Summary"
+  "resultsSummary" : "Results-Summary",
+  "planningShort" : "PL"
 }
