--- a/client/src/translations/financial_words_jp.json
+++ b/client/src/translations/financial_words_jp.json
@@ -108,10 +108,11 @@
   "sellingAndGeneralAdminExpensesShort": "販売及び一般管理費",
   "margins": "益率",
   "financials": "財務",
-  "financialsShort": "財務",
   "financialsPlanning": "計画: 財務",
   "financialsResults": "実績: 財務",
   "marginsPlanning": "計画: 益率",
-  "marginsResults": "実績: 益率"
+  "marginsResults": "実績: 益率",
+  "financialsPlanningAndResults": "計画 / 実績 : 財務",
+  "marginsPlanningAndResults":  "計画 / 実績 : 益率"
 }
 
