removed uneeded code and cleaned up/fixed issues

--- a/client/src/translations/general_words_en.json
+++ b/client/src/translations/general_words_en.json
@@ -158,5 +158,6 @@
   "yearMonth": "Year/Month",
   "csvFileName": "CSV: Financial Summary",
   "resultsSummary" : "Results-Summary",
-  "planningShort" : "PL"
+  "planningShort" : "PL.",
+  "resultsShort": "Res."
 }
