--- a/client/src/translations/general_words_en.json
+++ b/client/src/translations/general_words_en.json
@@ -159,5 +159,6 @@
   "csvFileName": "CSV: Financial Summary",
   "resultsSummary" : "Results-Summary",
   "planningShort" : "PL.",
-  "resultsShort": "Res."
+  "resultsShort": "Res.",
+  "resetExplanation": "Resets Modified Data in Inputs"
 }
