--- a/client/src/translations/general_words_jp.json
+++ b/client/src/translations/general_words_jp.json
@@ -160,5 +160,6 @@
   "resultsSummary": "実績-概要",
   "changeGraphType": "グラフ変更",
   "planningShort": "計画",
-  "resultsShort": "実績"
+  "resultsShort": "実績",
+  "noData": "データ無し"
 }
